libs/rdb/test/rdb/compile_fail/select_sans_from.cpp
#include "test_fail.hpp"

void test() {
  check_incomplete(select(p.id));
}

